[package]
name = "advent_of_code"
version = "0.9.3"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
chumsky = "0.9.3"
enum_dispatch = "0.3.12"
indicatif = "0.17.7"
itertools = "0.12.0"
pico-args = "0.5.0"
rangemap = "1.4.0"
rayon = "1.8.0"
slotmap = "1.0.7"
tailsome = "1.0.0"
tap = "1.0.1"
